--- a/hooks/fourthpage.html
+++ b/hooks/fourthpage.html
@@ -1,85 +1,122 @@
-<!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sprite Viewer - Fuumi GFX</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    canvas {
-      background-size: cover;
-      background-position: center;
-    }
-  </style>
-</head>
-<body class="bg-[#1a1a1a] text-white font-sans">
-  <header class="bg-[#111] py-4 shadow-md">
-    <div class="container mx-auto px-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold">Fuumi GFX Viewer</h1>
-      <a href="../index.html" class="text-sm bg-violet-700 px-3 py-1 rounded hover:bg-violet-800">Back to Homepage</a>
-    </div>
-  </header>  <main class="container mx-auto px-4 py-8">
-    <div class="mb-4">
-      <label class="block text-sm font-bold mb-2">Choose File</label>
-      <input type="file" id="imageInput" accept="image/*" class="bg-gray-800 text-white px-4 py-2 rounded" />
-    </div>
-    <div class="mb-4">
-      <label class="block text-sm font-bold mb-2">Background Image</label>
-      <input type="file" id="bgInput" accept="image/*" class="bg-gray-800 text-white px-4 py-2 rounded" />
-    </div>
-    <div class="mb-4">
-      <canvas id="canvas" width="64" height="64" class="border mx-auto"></canvas>
-    </div><div class="grid grid-cols-2 md:grid-cols-4 gap-4 max-w-md mx-auto">
-  <label><input type="checkbox" checked class="layer-toggle" data-layer="head" /> Head</label>
-  <label><input type="checkbox" checked class="layer-toggle" data-layer="hat" /> Hat</label>
-  <label><input type="checkbox" class="layer-toggle" data-layer="accessory" /> Accessory</label>
-  <label><input type="checkbox" checked class="layer-toggle" data-layer="body" /> Body</label>
-  <label><input type="checkbox" class="layer-toggle" data-layer="shield" /> Shield</label>
-  <label><input type="checkbox" checked class="layer-toggle" data-layer="sword" /> Sword</label>
-  <label><input type="checkbox" checked class="layer-toggle" data-layer="horse" /> Horse</label>
-  <label><input type="checkbox" checked class="layer-toggle" data-layer="param" /> Param</label>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Gani Previewer</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-[#1A1A1A] text-white font-sans min-h-screen">
 
-  </main>  <script>
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
-    let spriteImg = new Image();
-    let bgImg = new Image();
+    <!-- Header with logo and back button -->
+    <header class="flex justify-between items-center p-4 border-b border-white">
+      <div class="flex items-center space-x-2">
+        <img src="../images/your-logo.png" alt="Logo" class="h-10 w-auto" />
+        <span class="text-xl font-bold">Gani Previewer</span>
+      </div>
+      <a
+        href="../index.html"
+        class="bg-white text-black px-4 py-2 rounded hover:bg-gray-200 transition"
+      >
+        Back to Homepage
+      </a>
+    </header>
 
-    document.getElementById('imageInput').addEventListener('change', (e) => {
-      const file = e.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = () => {
-          spriteImg.src = reader.result;
-          spriteImg.onload = () => draw();
-        };
-        reader.readAsDataURL(file);
-      }
-    });
+    <!-- Main Section -->
+    <section class="max-w-5xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-8">
+      <!-- Left side: Upload and preview -->
+      <div class="md:col-span-2 space-y-4">
+        <input
+          type="file"
+          id="upload"
+          name="upload"
+          accept=".gif,.png,.gani"
+          class="block w-full text-black p-2 rounded"
+        />
+        <canvas
+          id="canvas"
+          width="400"
+          height="400"
+          class="w-full border border-white rounded bg-white"
+        ></canvas>
 
-    document.getElementById('bgInput').addEventListener('change', (e) => {
-      const file = e.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = () => {
-          bgImg.src = reader.result;
-          bgImg.onload = () => draw();
-        };
-        reader.readAsDataURL(file);
-      }
-    });
+        <div class="flex flex-wrap gap-4 text-black">
+          <select
+            name="animations"
+            id="animations"
+            onchange="onAnimationChanged(this)"
+            class="p-2 rounded"
+          ></select>
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      if (bgImg.src) ctx.drawImage(bgImg, 0, 0, canvas.width, canvas.height);
-      if (spriteImg.src) ctx.drawImage(spriteImg, 0, 0);
-    }
+          <label class="text-white">Direction:</label>
+          <select
+            name="directions"
+            id="directions"
+            onchange="onDirectionChanged(this)"
+            class="p-2 rounded"
+          >
+            <option value="0">Up</option>
+            <option value="1">Left</option>
+            <option value="2">Down</option>
+            <option value="3">Right</option>
+          </select>
 
-    document.querySelectorAll('.layer-toggle').forEach(checkbox => {
-      checkbox.addEventListener('change', () => {
-        // You can assign layer logic here if separating by sprites
-        draw();
-      });
-    });
-  </script></body>
+          <label class="text-white">Zoom:</label>
+          <select
+            name="zoom"
+            id="zoom"
+            onchange="onZoomChange(this)"
+            class="p-2 rounded"
+          >
+            <option value="1">1x</option>
+            <option value="2">2x</option>
+            <option value="3">3x</option>
+            <option value="4">4x</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- Right side: Toggles -->
+      <div>
+        <ul class="space-y-2 text-sm">
+          <li>
+            <input type="checkbox" id="vis_head" value="HEAD" checked onchange="onToggleVisibility(this)" />
+            <label for="vis_head">Head</label>
+          </li>
+          <li>
+            <input type="checkbox" id="vis_hat" value="ATTR1" checked onchange="onToggleVisibility(this)" />
+            <label for="vis_hat">Hat</label>
+          </li>
+          <li>
+            <input type="checkbox" id="vis_accessory" value="ATTR4" checked onchange="onToggleVisibility(this)" />
+            <label for="vis_accessory">Accessory</label>
+          </li>
+          <li>
+            <input type="checkbox" id="vis_body" value="BODY" checked onchange="onToggleVisibility(this)" />
+            <label for="vis_body">Body</label>
+          </li>
+          <li>
+            <input type="checkbox" id="vis_shield" value="SHIELD" checked onchange="onToggleVisibility(this)" />
+            <label for="vis_shield">Shield</label>
+          </li>
+          <li>
+            <input type="checkbox" id="vis_sword" value="SWORD" checked onchange="onToggleVisibility(this)" />
+            <label for="vis_sword">Sword</label>
+          </li>
+          <li>
+            <input type="checkbox" id="vis_horse" value="HORSE" checked onchange="onToggleVisibility(this)" />
+            <label for="vis_horse">Horse</label>
+          </li>
+          <li>
+            <input type="checkbox" id="vis_param" value="PARAM1" checked onchange="onToggleVisibility(this)" />
+            <label for="vis_param">Param</label>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Scripts -->
+    <script src="../hooks/defaultGanis.js?random=311"></script>
+    <script src="../hooks/main.js?random=311"></script>
+  </body>
 </html>
