--- a/hooks/fourthpage.html
+++ b/hooks/fourthpage.html
@@ -116,7 +116,7 @@
     </section>
 
     <!-- Scripts -->
-    <script src="../hooks/defaultGanis.js?random=311"></script>
-    <script src="../hooks/main.js?random=311"></script>
+    <script src="../hooks/defaultGanis.js"></script>
+    <script src="../hooks/main.js"></script>
   </body>
 </html>
