--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -34,11 +34,11 @@
       </div>
 
       <!-- Title -->
-      <h2 class="text-xl font-bold mb-2">Elarin the Flame</h2>
+      <h2 class="text-xl font-bold mb-2">Elster's Cave</h2>
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        Elster's Cave is just to the left of Sardon's Tower. Elster is a hoarder, so his cave is a mess. If you talk to him, Elster will give you a lump sum of gralats for all your loot items. Or if you don't want to give him everything, you can hold up items one at a time in front of him. He will buy any item from you. However, remember, you won't get as many gralats than selling to the other NPCs.
       </p>
 
       <!-- NPC Sub-Template -->
@@ -48,9 +48,7 @@
           <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
         </div>
         <p class="text-xs text-gray-300">
-          Elster's Cave is just to the left of Sardon's Tower. Elster is a hoarder, so his cave is a mess. If you talk to him, Elster will give you a lump sum of gralats for all your loot items. Or if you don't want to give him everything, you can hold up items one at a time in front of him. He will buy any item from you. However, remember, you won't get as many gralats than selling to the other NPCs.
-
-Below is a list of items that you have to sell to Elster, because no other NPCs buys them.
+          Below is a list of items that you have to sell to Elster, because no other NPCs buys them.
         </p>
       </div>
 
