--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -65,7 +65,7 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        He is standing on a small tent in York Town. It should be on the south of the horse track.
       </p>
 
       <!-- NPC Sub-Template -->
@@ -92,7 +92,7 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        He is located between Onnet Town and Snow Town, in a small stall where he sells the lanterns.
       </p>
 
       <!-- NPC Sub-Template -->
@@ -119,7 +119,7 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        In the south of Graal City before you enter the city itself (near the river bank).
       </p>
 
       <!-- NPC Sub-Template -->
@@ -173,7 +173,7 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        The stable is located in the Woods of Master Li almost next to his dojo.
       </p>
 
       <!-- NPC Sub-Template -->
@@ -200,7 +200,7 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        Located in the VIP Area, you can travel using the boat located in Delta Island.
       </p>
 
       <!-- NPC Sub-Template -->
@@ -210,7 +210,7 @@
           <h3 class="font-bold text-md">NPC: Joshua the Baby</h3>
         </div>
         <p class="text-xs text-gray-300">
-          He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
+          Located in the VIP Area, you can travel using the boat located in Delta Island.
         </p>
       </div>
 
@@ -223,7 +223,7 @@
       </div>
 
       <!-- Title -->
-      <h2 class="text-xl font-bold mb-2">Elarin the Flame</h2>
+      <h2 class="text-xl font-bold mb-2">Mysterious Cave</h2>
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
@@ -234,7 +234,7 @@
       <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
         <div class="flex items-center gap-3 mb-2">
           <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
-          <h3 class="font-bold text-md">NPC: Jack the Pyrat</h3>
+          <h3 class="font-bold text-md">NPC: Old Geezer</h3>
         </div>
         <p class="text-xs text-gray-300">
           He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
@@ -250,7 +250,7 @@
       </div>
 
       <!-- Title -->
-      <h2 class="text-xl font-bold mb-2">Elarin the Flame</h2>
+      <h2 class="text-xl font-bold mb-2">Snow Town Blacksmith</h2>
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
@@ -261,7 +261,7 @@
       <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
         <div class="flex items-center gap-3 mb-2">
           <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
-          <h3 class="font-bold text-md">NPC: Jack the Pyrat</h3>
+          <h3 class="font-bold text-md">NPC: Blacksmith</h3>
         </div>
         <p class="text-xs text-gray-300">
           He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
@@ -277,18 +277,18 @@
       </div>
 
       <!-- Title -->
-      <h2 class="text-xl font-bold mb-2">Elarin the Flame</h2>
+      <h2 class="text-xl font-bold mb-2">Swamp Town</h2>
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        Near Miser’s House, in the Swamp Town region.
       </p>
 
       <!-- NPC Sub-Template -->
       <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
         <div class="flex items-center gap-3 mb-2">
           <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
-          <h3 class="font-bold text-md">NPC: Jack the Pyrat</h3>
+          <h3 class="font-bold text-md">NPC: Floydian</h3>
         </div>
         <p class="text-xs text-gray-300">
           He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
@@ -304,21 +304,28 @@
       </div>
 
       <!-- Title -->
-      <h2 class="text-xl font-bold mb-2">Elarin the Flame</h2>
+      <h2 class="text-xl font-bold mb-2">Black Orchid Club</h2>
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        Inside Black Orchid Club, MoD Town
       </p>
 
       <!-- NPC Sub-Template -->
       <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
         <div class="flex items-center gap-3 mb-2">
           <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
-          <h3 class="font-bold text-md">NPC: Jack the Pyrat</h3>
+          <h3 class="font-bold text-md">NPC: Raphael</h3>
         </div>
         <p class="text-xs text-gray-300">
-          He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
+          Items Bought:
+
+Conch Shell – 18g
+
+Scallop Shell – 18g
+
+Other seashell loot – 18g
+
         </p>
       </div>
 
@@ -329,7 +336,7 @@
   </div>
 
   <footer class="text-center py-6 text-sm text-gray-400">
-    © Your Website Name
+    © Fuumi Galleria
   </footer>
 
 </body>
