--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Replaceable Image -->
     <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-120 h-auto" />
     <!-- Button -->
-    <a href="https://instagram.com" target="_blank" class="mt-4 inline-block bg-purple-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-purple-300 transition">
+    <a href="https://instagram.com/fuumi.iii" target="_blank" class="mt-4 inline-block bg-purple-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-purple-300 transition">
   VISIT SOCIALS
     </a>
   </div>
@@ -29,25 +29,25 @@
       <img src="images/Webhead.png" alt="Head" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">HEAD COLLECTIONS</h2>
       <a href="hooks/firstpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
-      <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
+      <p class="mt-2 text-sm">Free heads that you can use to start.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Webbody.png" alt="Body" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">BODY COLLECTIONS</h2>
       <a href="hooks/secondpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
-      <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
+      <p class="mt-2 text-sm">Premade bodies that is ready to he uploaded.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Loot.png" alt="Loot" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">LOOTING GUIDE</h2>
       <a href="hooks/thirdpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
-      <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
+      <p class="mt-2 text-sm">A basic information about loots and where to sell them to earn more.</p>
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Coin.png" alt="Preview" class="w-25 h-25 object-cover mb-4" />
       <h2 class="font-bold text-lg">UPLOADS PREVIEWER</h2>
       <a href="hooks/fourthpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
-      <p class="mt-2 text-sm">A beacon of wisdom. Sadly, can't cook or make a sandwich.</p>
+      <p class="mt-2 text-sm">Take a look at your heads and bodies before uploading them.</p>
     </div>
 
     
