--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#0d001c] text-white font-sans">
+  <style>
+    @font-face {
+      font-family: 'MyCustomFont';
+      src: url('../images/MonsterFriendFore.otf') format('opentype');
+    }
+
+    h1 {
+      font-family: 'MyCustomFont', sans-serif;
+      
+    }
+  </style>
   <div class="text-center py-8 bg-[#1a0033]">
     <!-- Replaceable Image -->
     <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-120 h-auto" />
