--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Fuumi Galleria</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#0d001c] text-white font-sans">
   <style>
     @font-face {
       font-family: 'MyCustomFont';
@@ -18,6 +17,8 @@
       
     }
   </style>
+<body class="bg-[#0d001c] text-white">
+  
   <div class="text-center py-8 bg-[#1a0033]">
     <!-- Replaceable Image -->
     <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-120 h-auto" />
