--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-family: 'MyCustomFont', sans-serif;
       
     }
-  </style>
+  </style
 <body class="bg-[#0d001c] text-white">
   
   <div class="text-center py-8 bg-[#1a0033]">
@@ -30,8 +30,8 @@
 
   <!-- Description -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
-    <p class="uppercase font-bold">A castle full of magic, adventures, witches and wizards.</p>
-    <p>An evil wizard is attacking everyone! Someone needs to be a hero — but who?</p>
+    <p class="uppercase font-bold">Welcome to my galleria.</p>
+    <p>This is still currently being worked on. Information may not be complete.</p>
   </div>
 
   <!-- Characters -->
