--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -11,7 +11,7 @@
   <!-- Header Section -->
   <div class="text-center py-8 bg-[#1a0033]">
     <img src="../Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
-    <a href="../index.html" class="mt-4 inline-block bg-yellow-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-yellow-300 transition">
+    <a href="../index.html" class="mt-4 inline-block bg-purple-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-yellow-300 transition">
       ← BACK TO HOME
     </a>
   </div>
@@ -42,9 +42,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -69,9 +69,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Jack the Pyrat</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -96,9 +96,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Lantern Seller</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -123,9 +123,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Taylor Richards</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -150,9 +150,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Owl's Nest Leader</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -177,9 +177,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Earl, Stable Hand</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -204,9 +204,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Joshua the Baby</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -231,9 +231,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Old Geezer</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -258,9 +258,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Blacksmith</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -285,9 +285,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Floydian</h3>
         </div>
         <p class="text-xs text-gray-300">
@@ -318,13 +318,13 @@
           <h3 class="font-bold text-md">NPC: Raphael</h3>
         </div>
         <p class="text-xs text-gray-300">
-          Items Bought:
-
-Conch Shell – 18g
-
-Scallop Shell – 18g
-
-Other seashell loot – 18g
+          <b>Items Bought:</b>
+          <br>
+          Conch Shell – 18g
+          <br>
+          Scallop Shell – 18g
+          <br>
+          Other seashell loot – 18g
 
         </p>
       </div>
