--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -18,8 +18,8 @@
 
   <!-- Page Description -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
-    <p class="uppercase font-bold">Explore magical heroes and their NPC companions.</p>
-    <p>Each card reveals key info about the character and their closest guide or rival.</p>
+    <p class="uppercase font-bold">This is not a instructions on how to loot.</p>
+    <p>This is a direct guide on where to sell the loot that you got from loot diving.</p>
   </div>
 
   <!-- Character Card Grid -->
@@ -48,7 +48,9 @@
           <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
         </div>
         <p class="text-xs text-gray-300">
-          Below is a list of items that you have to sell to Elster, because no other NPCs buys them.
+          <b>Items Bought:</b>
+          <br>All loot items
+          <br>Price: Low fixed rate (e.g. Cracked Shield = 13g, Gold Doubloon = 50g)
         </p>
       </div>
 
@@ -75,7 +77,11 @@
           <h3 class="font-bold text-md">NPC: Jack the Pyrat</h3>
         </div>
         <p class="text-xs text-gray-300">
-          He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
+          <b>Items Bought:</b>
+          <br>Gold Doubloon – 75g
+          <br>Silver Doubloon – 75g
+          <br>Heavy Anchor – 75g
+          <br>Ship Helm – 75g
         </p>
       </div>
 
@@ -102,7 +108,8 @@
           <h3 class="font-bold text-md">NPC: Lantern Seller</h3>
         </div>
         <p class="text-xs text-gray-300">
-          A loyal beast guardian of Elarin who speaks in riddles and hunts only at dusk.
+          <b>Items Bought:</b>
+          <br>Old Lantern – 18g
         </p>
       </div>
 
@@ -129,7 +136,9 @@
           <h3 class="font-bold text-md">NPC: Taylor Richards</h3>
         </div>
         <p class="text-xs text-gray-300">
-          A loyal beast guardian of Elarin who speaks in riddles and hunts only at dusk.
+          A<b>Items Bought:</b>
+          <br>Ruined Scarf – 18g
+          <br>Old Underwear – 18g
         </p>
       </div>
 
@@ -146,7 +155,7 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        Located in the cave out side the Destiny's Tower. Coin Toss is required to enter Owl's Nest.
       </p>
 
       <!-- NPC Sub-Template -->
@@ -156,7 +165,13 @@
           <h3 class="font-bold text-md">NPC: Owl's Nest Leader</h3>
         </div>
         <p class="text-xs text-gray-300">
-          A loyal beast guardian of Elarin who speaks in riddles and hunts only at dusk.
+          <b>Items Bought:</b>
+          <br>Gold Necklace – 150g
+          <br>Gold Nugget – 150g
+          <br>Gold Pearl – 150g
+          <br>Water Amulet – 150g
+          <br>Magical Crystal – 150g
+          <br>Ornate Ring – 150g
         </p>
       </div>
                 
@@ -183,7 +198,8 @@
           <h3 class="font-bold text-md">NPC: Earl, Stable Hand</h3>
         </div>
         <p class="text-xs text-gray-300">
-          He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
+          <b>Items Bought:</b>
+          <br>Old Horseshoe – 18g
         </p>
       </div>
 
@@ -210,7 +226,10 @@
           <h3 class="font-bold text-md">NPC: Joshua the Baby</h3>
         </div>
         <p class="text-xs text-gray-300">
-          Located in the VIP Area, you can travel using the boat located in Delta Island.
+          <b>Items Bought:</b>
+          <br>Conch Shell – 18g
+          <br>Scallop Shell – 18g
+          <br>Other seashell loot – 18g
         </p>
       </div>
 
@@ -227,7 +246,7 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        Hidden in a side cave inside the Rail Cave tunnel.
       </p>
 
       <!-- NPC Sub-Template -->
@@ -237,7 +256,8 @@
           <h3 class="font-bold text-md">NPC: Old Geezer</h3>
         </div>
         <p class="text-xs text-gray-300">
-          He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
+          <b>Items Bought:</b>
+          <br>Odd-Shaped Gem – 18g
         </p>
       </div>
 
@@ -254,7 +274,7 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        A brave sorceress who mastered fire at the young age of 9. She now defends the flame citadel with everything she has.
+        Located in Snow Town. A draisine or lantern is required to enter the town.
       </p>
 
       <!-- NPC Sub-Template -->
@@ -264,7 +284,12 @@
           <h3 class="font-bold text-md">NPC: Blacksmith</h3>
         </div>
         <p class="text-xs text-gray-300">
-          He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
+          <b>Items Bought:</b>
+          <br>Broken Sword – 18g
+          <br>Chainless Flail – 18g
+          <br>Cracked Shield – 18g
+          <br>Defuse Bomb – 18g
+          <br>Dull Arrow – 18g
         </p>
       </div>
 
@@ -291,7 +316,9 @@
           <h3 class="font-bold text-md">NPC: Floydian</h3>
         </div>
         <p class="text-xs text-gray-300">
-          He is standing on a small boat in York Town. Get in the water east of the horse track and swim east a little.
+          <b>Items Bought:</b>
+          <br>Fishing Lure – 18g
+          <br>Old Fishing Hook – 18g
         </p>
       </div>
 
@@ -319,12 +346,8 @@
         </div>
         <p class="text-xs text-gray-300">
           <b>Items Bought:</b>
-          <br>
-          Conch Shell – 18g
-          <br>
-          Scallop Shell – 18g
-          <br>
-          Other seashell loot – 18g
+          <br>Dirty Mug – 18g
+          <br>Shiny Mug – 18g
 
         </p>
       </div>
