--- a/fourthpage.html
+++ b/fourthpage.html
@@ -26,7 +26,7 @@
         padding: 30px;
         text-align: center;
         font-size: 35px;
-        color: white;
+        color: purple;
       }
 
       nav {
@@ -59,7 +59,7 @@
       footer {
         padding: 10px;
         text-align: center;
-        color: white;
+        color: #1a0033;
       }
 
       @media (max-width: 600px) {
