--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -339,9 +339,9 @@
       </p>
 
       <!-- NPC Sub-Template -->
-      <div class="bg-[#2a0044] p-3 rounded-lg border border-yellow-500">
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-yellow-400" />
+          <img src="images/npc1.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Raphael</h3>
         </div>
         <p class="text-xs text-gray-300">
