--- a/fourthpage.html
+++ b/fourthpage.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <img src="../images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
     <title>Gani Previewer</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-
+    
     <style>
       * {
         box-sizing: border-box;
