--- a/fourthpage.html
+++ b/fourthpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
     <img src="../images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
     <title>Gani Previewer</title>
     <meta charset="utf-8" />
