--- a/fourthpage.html
+++ b/fourthpage.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
-    <img src="../images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
     <title>Gani Previewer</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -143,7 +142,7 @@
       </nav>
     </section>
 
-    <footer>© Tuumi Galleria - Gani Previewer</footer>
+    <footer>© Fuumi Galleria - Gani Previewer</footer>
 
     <script type="text/javascript" src="defaultGanis.js?random=203"></script>
     <script type="text/javascript" src="main.js?random=203"></script>
