--- a/fourthpage.html
+++ b/fourthpage.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <body class="bg-[#0d001c] text-white font-sans">
+
+  <!-- Header Section -->
+  <div class="text-center py-8 bg-[#1a0033]">
     <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
+    <a href="index.html" class="mt-4 inline-block bg-purple-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-yellow-300 transition">
+      ← BACK TO HOME
+    </a>
     <title>Gani Previewer</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
