--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
   <title>Heads Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
