--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Fuumi Galleria</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#0d001c] text-white">
+<body class="bg-[#0d001c] text-white jersey-font">
   
   <div class="text-center py-8 bg-[#1a0033]">
     <!-- Replaceable Image -->
