--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -208,7 +208,7 @@
       
       <!-- Top Image (Header Photo) -->
       <div class="w-full aspect-[5/3] bg-gray-800 rounded mb-4 overflow-hidden">
-        <img src="images/hero1-header.png" alt="Header Image" class="w-full h-full object-cover" />
+        <img src="../images/oasis.png" alt="Header Image" class="w-full h-full object-cover" />
       </div>
 
       <!-- Title -->
