--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
+  <style>
+  @font-face {
+    font-family: 'Jersey 10';
+    src: url('fonts/Jersey10-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  .jersey-font {
+    font-family: 'Jersey 10', sans-serif;
+  }
+  </style>
   <title>Fuumi Galleria</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -29,7 +40,7 @@
     <!-- CHARACTER CARD TEMPLATE -->
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Webhead.png" alt="Head" class="w-25 h-25 object-cover mb-4" />
-      <h2 class="font-bold text-lg">HEAD COLLECTIONS</h2>
+      <h2 class="jersey-font text-lg font-bold">HEAD COLLECTIONS</h2>
       <a href="hooks/firstpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
       <p class="mt-2 text-sm">Free heads that you can use to start.</p>
     </div>
