--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
   @font-face {
     font-family: 'Jersey 10';
-    src: url('fonts/Jersey10-Regular.woff2') format('woff2');
+    src: url('images/Jersey10-Regular.ttf') format('ttf');
     font-weight: normal;
     font-style: normal;
   }
