--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-  @font-face {
-    font-family: 'Jersey 10';
-    src: url('images/Jersey10-Regular.ttf') format('ttf');
-    font-weight: normal;
-    font-style: normal;
-  }
+@font-face {
+  font-family: 'Jersey 10';
+  src: url('images/Jersey10-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
-  .jersey-font {
-    font-family: 'Jersey 10', sans-serif;
-  }
-  </style>
+.jersey-font {
+  font-family: 'Jersey 10', sans-serif;
+}
+</style>
   <title>Fuumi Galleria</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
