--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
+  <style>
+@font-face {
+  font-family: 'Jersey 10';
+  src: url('images/Jersey10-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.jersey-font {
+  font-family: 'Jersey 10', sans-serif;
+}
+</style>
+
   <title>Heads Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
