--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -19,7 +19,7 @@
   <title>Heads Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#0d001c] text-white font-sans">
+<body class="bg-[#0d001c] text-white jersey-font">
 
   <!-- Header Section -->
   <div class="text-center py-8 bg-[#1a0033]">
