--- a/hooks/secondpage.html
+++ b/hooks/secondpage.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <style>
+@font-face {
+  font-family: 'Jersey 10';
+  src: url('images/Jersey10-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.jersey-font {
+  font-family: 'Jersey 10', sans-serif;
+}
+</style>
+
   <title>Bodies Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#0d001c] text-white font-sans">
+<body class="bg-[#0d001c] text-white jersey-font">
 
   <!-- Header Section -->
   <div class="text-center py-8 bg-[#1a0033]">
