--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Replaceable Image -->
     <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-120 h-auto" />
     <!-- Button -->
-    <a href="https://instagram.com/fuumi.iii" target="_blank" class="mt-4 inline-block bg-purple-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-purple-300 transition">
+    <a href="https://instagram.com/fuumi.iii" target="_blank" class="mt-4 inline-block bg-purple-400 text-white font-bold py-2 px-6 rounded shadow-lg hover:bg-purple-300 transition">
   VISIT SOCIALS
     </a>
   </div>
