--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
+  .header-bg {
+    background-image: url('images/header-bg.png'); /* replace with your image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+</style>
+  <style>
 @font-face {
   font-family: 'Jersey 10';
   src: url('images/Jersey10-Regular.ttf') format('truetype');
@@ -20,7 +28,7 @@
 </head>
 <body class="bg-[#0d001c] text-white jersey-font">
   
-  <div class="text-center py-8 bg-[#1a0033]">
+  <div class="text-center py-8 header-bg">
     <!-- Replaceable Image -->
     <img src="images/Galleria .png" alt="Custom Logo" class="mx-auto w-120 h-auto" />
     <!-- Button -->
