--- a/hooks/secondpage.html
+++ b/hooks/secondpage.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
+  .header-bg {
+    background-image: url('images/header-bg.png'); /* replace with your image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+</style>
+  <style>
 @font-face {
   font-family: 'Jersey 10';
   src: url('images/Jersey10-Regular.ttf') format('truetype');
@@ -22,7 +30,7 @@
 <body class="bg-[#0d001c] text-white jersey-font">
 
   <!-- Header Section -->
-  <div class="text-center py-8 bg-[#1a0033]">
+  <div class="text-center py-8 header-bg">
     <img src="../images/Galleria .png" alt="Custom Logo" class="mx-auto w-48 h-auto" />
     <a href="../index.html" class="mt-4 inline-block bg-yellow-400 text-black font-bold py-2 px-6 rounded shadow-lg hover:bg-yellow-300 transition">
       ← BACK TO HOME
