--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -14,7 +14,7 @@
   <style>
 @font-face {
   font-family: 'Jersey 10';
-  src: url('images/Jersey10-Regular.ttf') format('truetype');
+  src: url('../images/Jersey10-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
