--- a/hooks/thirdpage.html
+++ b/hooks/thirdpage.html
@@ -25,6 +25,7 @@
 </style>
 
   <title>Third Page - Character Info</title>
+  <link rel="icon" href="images/favicon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#0d001c] text-white jersey-font">
