--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -24,6 +24,7 @@
 }
 </style>
   <title>Heads Page</title>
+  <link rel="icon" href="images/favicon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#0d001c] text-white jersey-font">
