--- a/hooks/secondpage.html
+++ b/hooks/secondpage.html
@@ -25,7 +25,7 @@
 </style>
 
   <title>Bodies Page</title>
-  <link rel="icon" href="images/favicon.png" type="image/png">
+  <link rel="icon" href="../images/favicon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#0d001c] text-white jersey-font">
