--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- Description -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
     <p class="uppercase font-bold">Welcome to my galleria.</p>
-    <p>This is still currently being worked on. Information may not be complete.</p>
+    <p>This is still currently being worked on. Information may not be complete. You may contact me thru Discord: fuumiii.</p>
   </div>
 
   <!-- Characters -->
