--- a/hooks/firstpage.html
+++ b/hooks/firstpage.html
@@ -40,7 +40,7 @@
   <!-- Description -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
     <p class="uppercase font-bold">✨ Here's a list of heads that you might like ✨</p>
-    <p>PS. I do not own this heads and credits belongs to their rightful owners.</p>
+    <p>PS. I do not own these heads and credits belongs to their rightful owners.</p>
   </div>
 
   <!-- Thin Vertical Slots (32x560) -->
