--- a/hooks/secondpage.html
+++ b/hooks/secondpage.html
@@ -41,7 +41,7 @@
   <!-- Description -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
     <p class="uppercase font-bold">✨ Here's a list of bodies that you might like ✨</p>
-    <p>PS. I do not own this bodies and credits belongs to their rightful owners.</p>
+    <p>PS. I do not own these bodies and credits belongs to their rightful owners.</p>
   </div>
 
   <!-- Image Slot Grid -->
