--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -37,4 +37,13 @@
       ← BACK TO HOME
     </a>
   </div>
+
+</div>
+
+  <footer class="text-center py-6 text-sm text-gray-400">
+    © Fuumi Galleria
+  </footer>
+
+</body>
+</html>
   
