--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -38,6 +38,45 @@
     </a>
   </div>
 
+  <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
+    <p class="uppercase font-bold">This is not a instructions on how to loot.</p>
+    <p>This is a direct guide on where to sell the loot that you got from loot diving.</p>
+  </div>
+
+  <!-- Character Card Grid -->
+  <div class="flex flex-wrap justify-center gap-8 p-6 max-w-6xl mx-auto">
+
+    <!-- Template Card -->
+    <div class="bg-[#1e002e] rounded-lg p-4 max-w-xs shadow-lg">
+      
+      <!-- Top Image (Header Photo) -->
+      <div class="w-full aspect-[5/3] bg-gray-800 rounded mb-4 overflow-hidden">
+        <img src="../images/cave.png" alt="Header Image" class="w-full h-full object-cover" />
+      </div>
+
+      <!-- Title -->
+      <h2 class="text-xl font-bold mb-2">Elster's Cave</h2>
+
+      <!-- Description -->
+      <p class="text-sm text-gray-300 mb-4">
+        Elster's Cave is just to the left of Sardon's Tower. Elster is a hoarder, so his cave is a mess. Elster can buy all your loot for a lump sum or individual items one by one. He accepts anything, but you'll get fewer gralats than from other NPCs.
+      </p>
+
+      <!-- NPC Sub-Template -->
+      <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
+        <div class="flex items-center gap-3 mb-2">
+          <img src="../images/els.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
+          <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
+        </div>
+        <p class="text-xs text-gray-300">
+          <b>Items Bought:</b>
+          <br>All loot items
+          <br>Price: Low fixed rate (e.g. Cracked Shield = 13g, Gold Doubloon = 50g)
+        </p>
+      </div>
+
+    </div>
+
 </div>
 
   <footer class="text-center py-6 text-sm text-gray-400">
