--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -3,30 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <style>
-  .header-bg {
-    background-image: url('images/header-bg.png'); /* replace with your image path */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-</style>
-  <style>
-@font-face {
-  font-family: 'Jersey 10';
-  src: url('../images/Jersey10-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-.jersey-font {
-  font-family: 'Jersey 10', sans-serif;
-}
-</style>
-
   <title>Third Page - Character Info</title>
   <link rel="icon" href="../images/favicon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <style>
+    .header-bg {
+      background-image: url('images/header-bg.png'); /* replace with your image path */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    @font-face {
+      font-family: 'Jersey 10';
+      src: url('../images/Jersey10-Regular.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
+
+    .jersey-font {
+      font-family: 'Jersey 10', sans-serif;
+    }
+  </style>
 </head>
 <body class="bg-[#0d001c] text-white jersey-font">
 
@@ -38,20 +37,21 @@
     </a>
   </div>
 
+  <!-- Page Introduction -->
   <div class="max-w-3xl mx-auto text-center p-6 space-y-4">
-    <p class="uppercase font-bold">This is not a instructions on how to loot.</p>
+    <p class="uppercase font-bold">This is not an instructions page on how to loot.</p>
     <p>This is a direct guide on where to sell the loot that you got from loot diving.</p>
   </div>
 
   <!-- Character Card Grid -->
   <div class="flex flex-wrap justify-center gap-8 p-6 max-w-6xl mx-auto">
 
-    <!-- Template Card -->
-    <div class="bg-[#1e002e] rounded-lg p-4 max-w-xs shadow-lg">
+    <!-- Character Card - Elster -->
+    <div class="bg-[#1e002e] rounded-lg p-4 shadow-lg max-w-xs">
       
-      <!-- Top Image (Header Photo) -->
-      <div class="w-full aspect-[5/3] bg-gray-800 rounded mb-4 overflow-hidden">
-        <img src="../images/cave.png" alt="Header Image" class="w-full h-full object-cover" />
+      <!-- Top Image with 5:3 Aspect Ratio -->
+      <div class="relative w-full aspect-[5/3] bg-gray-800 rounded mb-4 overflow-hidden">
+        <img src="../images/cave.png" alt="Elster's Cave" class="absolute inset-0 w-full h-full object-cover" />
       </div>
 
       <!-- Title -->
@@ -59,25 +59,25 @@
 
       <!-- Description -->
       <p class="text-sm text-gray-300 mb-4">
-        Elster's Cave is just to the left of Sardon's Tower. Elster is a hoarder, so his cave is a mess. Elster can buy all your loot for a lump sum or individual items one by one. He accepts anything, but you'll get fewer gralats than from other NPCs.
+        Elster's Cave is to the left of Sardon's Tower. Elster buys loot either all at once or per item. He accepts anything but gives lower rates.
       </p>
 
-      <!-- NPC Sub-Template -->
+      <!-- NPC Details -->
       <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="../images/els.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
+          <img src="../images/els.png" alt="Elster" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
         </div>
         <p class="text-xs text-gray-300">
-          <b>Items Bought:</b>
-          <br>All loot items
-          <br>Price: Low fixed rate (e.g. Cracked Shield = 13g, Gold Doubloon = 50g)
+          <b>Items Bought:</b> All loot items<br>
+          <b>Price:</b> Low fixed rate (e.g. Cracked Shield = 13g, Gold Doubloon = 50g)
         </p>
       </div>
-
     </div>
 
-</div>
+    <!-- You can copy the card above and paste more below to expand the grid -->
+
+  </div>
 
   <footer class="text-center py-6 text-sm text-gray-400">
     © Fuumi Galleria
@@ -85,4 +85,3 @@
 
 </body>
 </html>
-  
