--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -42,27 +42,27 @@
 
   <!-- Card Section -->
   <section class="flex justify-center p-6">
-    <div class="relative w-[500px] aspect-[5/3] bg-[#1e002e] rounded-xl shadow-lg p-4 flex flex-col justify-between">
+    <div class="relative w-[700px] aspect-[7/4] bg-[#1e002e] rounded-xl shadow-xl p-6 flex flex-col justify-between">
 
       <!-- Top Image (optional) -->
-      <div class="relative w-full aspect-[5/3] overflow-hidden rounded-md mb-2">
+      <div class="relative w-full aspect-[7/4] overflow-hidden rounded-md mb-4">
         <img src="../images/cave.png" alt="Elster's Cave" class="absolute w-full h-full object-cover" />
       </div>
 
       <!-- Card Content -->
-      <div class="text-sm space-y-2 overflow-y-auto">
-        <h2 class="text-xl font-bold">Elster's Cave</h2>
-        <p class="text-gray-300">
-          Located left of Sardon’s Tower. Elster is a messy hoarder who buys all loot — either all at once or one by one — but pays lower than others.
+      <div class="text-sm space-y-3 overflow-y-auto">
+        <h2 class="text-2xl font-bold">Elster's Cave</h2>
+        <p class="text-gray-300 text-base">
+          Located just left of Sardon's Tower, Elster is a messy hoarder. He buys all loot — either in bulk or individually — but pays less than others.
         </p>
 
         <!-- NPC Info -->
-        <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
-          <div class="flex items-center gap-3 mb-2">
-            <img src="../images/els.png" alt="Elster Icon" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
-            <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
+        <div class="bg-[#2a0044] p-4 rounded-lg border border-purple-500">
+          <div class="flex items-center gap-4 mb-3">
+            <img src="../images/els.png" alt="Elster Icon" class="w-12 h-12 rounded-full object-cover border border-purple-400" />
+            <h3 class="font-bold text-lg">NPC: Elster the Hoarder</h3>
           </div>
-          <p class="text-xs text-gray-300">
+          <p class="text-sm text-gray-300">
             <b>Items Bought:</b> All loot items<br>
             <b>Price:</b> Low fixed rate (e.g. Cracked Shield = 13g, Gold Doubloon = 50g)
           </p>
