--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -42,15 +42,15 @@
 
   <!-- Card Section -->
   <section class="flex justify-center p-6">
-    <div class="relative w-[700px] aspect-[7/4] bg-[#1e002e] rounded-xl shadow-xl p-6 flex flex-col justify-between">
+    <div class="relative w-[800px] aspect-[16/10] bg-[#1e002e] rounded-xl shadow-xl p-6 flex flex-col justify-between">
 
-      <!-- Top Image (optional) -->
-      <div class="relative w-full aspect-[7/4] overflow-hidden rounded-md mb-4">
+      <!-- Top Image -->
+      <div class="relative w-full aspect-[16/10] overflow-hidden rounded-md mb-4">
         <img src="../images/cave.png" alt="Elster's Cave" class="absolute w-full h-full object-cover" />
       </div>
 
       <!-- Card Content -->
-      <div class="text-sm space-y-3 overflow-y-auto">
+      <div class="text-sm space-y-4 overflow-y-auto">
         <h2 class="text-2xl font-bold">Elster's Cave</h2>
         <p class="text-gray-300 text-base">
           Located just left of Sardon's Tower, Elster is a messy hoarder. He buys all loot — either in bulk or individually — but pays less than others.
